We use #C1292F for anchors.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Remplify - Coming Soon</title>
+    <style type="text/css">
+        a {
+            color: #C1292F;
+    </style>
 </head>
 <body>
     <p style="font-family:monospace">Getting things set up. Hold on tight, maybe follow us on <a href="https://twitter.com/remplify/">Twitter</a>. :)</p>
